# node-jpeg-turbo

./: .gitignore  .npmignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  binding.gyp  index.js  module.d.ts  package.json
src/: binding.cc  buffersize.cc  compress.cc  compress.h  decompress.cc  decompressAsync.cc  exports.cc  exports.h
tests/: buffersize.spec.js  compress.spec.js  decompress.spec.js
